# verbihr

./: .gitignore  Cargo.toml  LICENSE.md  Makefile.toml  README.md  build.rs  index.html  index.js  main.css  package.json  tailwind.config.js  translation.yaml  verbihr.js  verbihr_bg.wasm
.github/workflows/: build_and_deploy.yml
assets/: tailwind.css
release/: index.html
src/: app.rs  constants.rs  context.rs  i18n.rs  irregular_verb.rs  lib.rs  main.rs  utils.rs
src/components/: body.rs  end.rs  game.rs  mod.rs
src/resources/: irregular_verbs.yaml  translation.yaml
