[package]
name = "verbihr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doc = false

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z" 

[dependencies]
gloo-console = "0.3.0"
postcard = { version = "1.0.10"}
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = ["Navigator", "MediaQueryList", "Window", "HtmlSelectElement", "HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }

[build-dependencies]
serde_yaml = "0.9.34"
serde = { version = "1.0.210", features = ["derive"] }
anyhow = "1.0.89"
postcard = { version = "1.0.10", features = ["use-std"] }
